@@ -19,7 +19,7 @@
 
 #ifndef _CRT_TERMINATE_DEFINED
 #define _CRT_TERMINATE_DEFINED
-_CRTIMP __declspec(noreturn) void __cdecl exit(int _Code);
+__declspec(noreturn) void __cdecl exit(int _Code);
 _CRTIMP __declspec(noreturn) void __cdecl _exit(int _Code);
 #if !defined __NO_ISOCEXT /* extern stub in static libmingwex.a */
 /* C99 function name */
